# gork

./: .gitignore  Cargo.toml  Dockerfile  compose.yml  readme.md
.github/workflows/: release.yml
src/: main.rs
src/ingestors/: app_bsky_feed_post.rs  mod.rs  place_stream_chat_message.rs
