[package]
name = "gorkit"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
rocketman = "0.3.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
genai = "0.2.4"
async-trait = "0.1.88"
dotenvy = "0.15.7"
jacquard = { git = "https://tangled.org/nonbinary.computer/jacquard"}
